# us-congressional-districts

./: .buildinfo  .gitignore  Makefile  README.md  genindex.html  intro.html  markdown.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: code_changes.yaml  pr_code_changes.yaml
data/input/: README.md
data/input/demographics/: age-district.csv  age-state.csv  age_district.csv  age_national.csv
data/input/geographies/: districts.csv  states.csv
data/output/: README.md
docs/: _config.yml  _toc.yml  markdown.md  overview.ipynb
src/us_congressional_districts/: __init__.py  calibrate.py  pull-age-targets.py  pull-district-geometries.py  pull-state-geometries.py  pull_age_targets.py  pull_district_geometries.py  pull_state_geometries.py  utils.py
tests/: test_age_estimation.py
