[project]
name = "us-congressional-districts"
version = "0.1.0"
description = "US Congressional District Level Estimation"
readme = "README.md"
authors = [
    { name = "Nikhil Woodruff", email = "nikhil.woodruff@policyengine.org" },
    { name = "Max Ghenis", email = "max.ghenis@policyengine.org" },
    { name = "Ben Ogorek", email = "ben.ogorek@policyengine.org" }
]
requires-python = ">=3.11"
dependencies = [
    "furo>=2024.8.6",
    "geopandas>=1.0.1",
    "h5py>=3.13.0",
    "jupyter-book==1.0.4.post1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip-system-certs>=4.0",
    "ruff>=0.11.8",
    "snowballstemmer>=2,<3",
    "sphinx==7.4.7",
    "torch>=2.7.0",
    "us>=3.2.0",
]

[project.scripts]
us-congressional-districts = "us_congressional_districts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
